[package]
name = "cubone"
edition = "2021"
version = "0.1.0"

[dependencies]
axum = "0.8.1"
config = "0.15.4"
chrono = { version = "0.4.39", features = ["serde"] }
concat-string = "1.0.1"
ipnetwork = "0.20.0"
tower = "0.5.1"
tracing = "0.1.40"

[dependencies.diesel]
version = "2.2.4"
features = ["postgres", "chrono", "network-address"]

[dependencies.mtilib]
path = "../lib"
features = ["config", "diesel"]

[dependencies.serde]
version = "1.0.215"
features = ["derive"]

[dependencies.tokio]
version = "1.41.1"
features = ["full"]

[dependencies.tokio-util]
version = "0.7.12"
features = ["rt"]

[dependencies.tower-http]
version = "0.6.1"
features = ["trace"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["std", "ansi", "smallvec", "fmt"]
default-features = false

[dependencies.uuid]
version = "1.11.0"
features = ["v4"]
