[package]
name = "cubone"
edition = "2021"
version = "0.1.0"

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.39", default-features = false, features = ["serde"] }
concat-string = "1.0.1"
config = "0.15.4"
diesel = { version = "2.2.4", features = ["postgres", "chrono", "network-address"] }
ipnetwork = "0.20.0"
mtilib = { path = "../lib", features = ["config", "diesel"] }
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["rt"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.19"
uuid = { version = "1.11.0", default-features = false, features = ["v4"] }
