[package]
name = "cubone"
edition = "2021"
version = "1.0.0"

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.39", default-features = false, features = ["serde"] }
concat-string = "1.0.1"
config = { version = "0.15.4", default-features = false, features = ["toml"] }
ipnetwork = { version = "0.20.0", features = ["serde"] }
mtilib = { path = "../lib", features = ["pokedex", "rustls", "serde", "settings", "sqlx"] }
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["postgres", "chrono", "ipnetwork", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["rt"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.19"
urlencoding = "2.1.3"
uuid = { version = "1.11.0", default-features = false, features = ["v4"] }
