[package]
name = "diglett"
version = "1.2.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
clokwerk = "0.4.0"
concat-string = "1.0.1"
config = "0.14.1"
csv = "1.3.1"
mtilib = { path = "../lib", features = ["axum", "config"] }
priority-queue = "2.1.1"
regex = "1.11.1"
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["rt"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["v4"] }
