[package]
name = "mtilib"
version = "0.1.0"
edition = "2021"

[features]
default = ["serde"]
axum = ["dep:axum", "dep:jsonwebtoken"]
config = ["dep:config"]
diesel = ["dep:diesel", "dep:urlencoding"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
axum = { version = "0.7.7", optional = true }
concat-string = "1.0.1"
config = { version = "0.15.4", optional = true }
diesel = { version = "2.2.6", features = ["postgres"], optional = true }
jsonwebtoken = { version = "9.3.0", optional = true }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"], optional = true }
serde_json = { version = "1.0.133", optional = true }
tokio = { version = "1.42.0", features = ["fs"], default-features = false}
url = "2.5.4"
urlencoding = { version = "2.1.3", optional = true }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
