[package]
name = "mtilib"
version = "0.1.0"
edition = "2021"

[features]
axum = ["dep:axum", "dep:jsonwebtoken"]
settings = ["dep:config"]
diesel = ["dep:chrono", "dep:diesel", "dep:urlencoding"]
serde = ["dep:serde", "dep:serde_json"]
sqlx = ["dep:chrono", "dep:sqlx", "dep:urlencoding"]

[dependencies]
axum = { version = "0.8.1", optional = true }
chrono = { version = "*", default-features = false, features = ["serde"], optional = true }
concat-string = "1.0.1"
config = { version = "0.15.4", default-features = false, features = ["toml"], optional = true }
diesel = { version = "2.2.6", features = ["postgres"], optional = true }
jsonwebtoken = { version = "9.3.0", optional = true }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"], optional = true }
serde_json = { version = "1.0.133", optional = true }
sqlx = { version = "0.8", features = ["postgres", "chrono", "ipnetwork", "runtime-tokio", "tls-rustls"], optional = true }
tokio = { version = "1.42.0", features = ["fs"], default-features = false}
url = "2.5.4"
urlencoding = { version = "2.1.3", optional = true }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
