[package]
name = "pidgeotto"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
chrono = "0.4.38"
concat-string = "1.0.1"
config = "0.15.6"
futures = "0.3.31"
ipnetwork = "0.20.0"
jsonwebtoken = "9.3.0"
mtilib = { path = "../lib", features = ["axum", "pokedex", "settings", "sqlx"] }
priority-queue = "2.1.1"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.3", features = ["postgres", "chrono", "ipnetwork", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["rt"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["v4"] }
