[package]
name = "pidgey"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
concat-string = "1.0.1"
config = "0.14.1"
futures = "0.3.31"
mtilib = { path = "../lib", features = ["config"] }
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json"] }
rustls = { version = "0.23.19", features = ["ring"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
surge-ping = "0.8.1"
tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["url", "rustls-tls-native-roots"] }
tokio-util = { version = "0.7.12", features = ["rt"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.4"
uuid = { version = "1.11.0", features = ["v4"] }
