[package]
name = "pidgey-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
concat-string = "1.0.1"
config = "0.14.1"
mtilib = { path = "../../lib" }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
surge-ping = "0.8.1"
tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = "0.24.0"
tokio-util = { version = "0.7.12", features = ["rt"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["v4"] }
