[package]
name = "pokedex-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.16.0"
clap = { version = "4.5.21", features = ["derive"] }
concat-string = "1.0.1"
config = "0.14.1"
diesel = { version = "2.2.4", features = ["postgres", "network-address"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
