[package]
name = "pokedex-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.16.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
config = { version = "0.15.4", default-features = false, features = ["toml"] }
mtilib = { path = "../../lib", features = ["sqlx", "settings", "serde"] }
serde = "1.0.217"
sqlx = { version = "0.8.3", features = ["postgres", "uuid", "chrono", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.42.0", default-features = false, features = ["macros", "rt"] }
uuid = { version = "1.11.0", features = ["v4"] }
