[package]
name = "pokedex-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
bcrypt = "0.16.0"
chrono = "0.4.38"
concat-string = "1.0.1"
config = "0.14.1"
diesel = { version = "2.2.4", features = ["postgres", "chrono"] }
jsonwebtoken = "9.3.0"
mtilib = { path = "../../lib", features = ["axum"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["rt"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["v4"] }
