[package]
name = "pokedex-daemon"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
bcrypt = "0.16.0"
chrono = { version = "0.4.38", features = ["serde"] }
config = { version = "0.15.4", default-features = false, features = ["toml"] }
futures = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
jsonwebtoken = "9.3.0"
mtilib = { path = "../../lib", features = ["axum", "serde", "settings", "sqlx"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.3", features = ["postgres", "uuid", "chrono", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = "0.26.1"
tokio-util = { version = "0.7.12", features = ["rt"] }
tower = "0.5.2"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["v4"] }
